--- a/Game.ActorModel/Game.ActorModel.csproj
+++ b/Game.ActorModel/Game.ActorModel.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Akka" Version="1.4.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Actors\" />
+  </ItemGroup>
+
 </Project>
