--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@microsoft/signalr": "^5.0.0"
+    "@microsoft/signalr": "^5.0.0",
+    "knockout": "^3.5.1"
   }
 }
