--- a/Game.Web/Game.Web.csproj
+++ b/Game.Web/Game.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.4.12" />
+    <PackageReference Include="Akka.Remote" Version="1.4.12" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
   </ItemGroup>
 
